--- a/src/public/stylesheets/liquid.css
+++ b/src/public/stylesheets/liquid.css
@@ -4,6 +4,7 @@ body {
     margin: 0;
     padding: 0;
     background: #000000;
+    /* background-color: aqua; */
     color: #666666;
     line-height: 1.25em;
 }
