many instruments simultaneusly

--- a/src/views/midiController.ejs
+++ b/src/views/midiController.ejs
@@ -8,10 +8,12 @@
 </head>
 
 <body scroll="no">
-    
+    <h1>Instrumento: <%= session %></h1>
+    <h2 style="display:none;" id="session"><%= session %></h2>
+  
     <script src="/socket.io/socket.io.js"></script>
+    <script src="/javascripts/jquery-3.3.1.min.js"></script>
     <script src="/javascripts/midi.js"></script>
     <script src="/javascripts/p5.min.js"></script>
 </body>
-
 </html>
