--- a/src/views/mobilef.ejs
+++ b/src/views/mobilef.ejs
@@ -2,17 +2,17 @@
 <html>
 
 <head>
-    <title>THUS | midi</title>
+    <title>THUS | mobile</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheets/midi.css">
 </head>
 
 <body scroll="no">
-    <h1>Instrumento: <%= session %></h1>
+    <!-- <h1>Sesion: <%= session %></h1> -->
     <h2 style="display:none;" id="session"><%= session %></h2>
   
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/javascripts/midi.js"></script>
+    <script src="/javascripts/mobilef.js"></script>
     <script src="/javascripts/p5.min.js"></script>
 </body>
 </html>
